--- a/my-app/src/components/Navbar/style.css
+++ b/my-app/src/components/Navbar/style.css
@@ -1,6 +1,6 @@
 .navbar {
     margin-top: 0px;
-    background: #5133a4;
+    background: black;
     min-height: 70px;
     position: sticky;
     width: 100%;
